<resources>
    <string name="app_name">MyFirstApplication</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="enter_the_email_id">Enter the Email Id</string>
    <string name="enter_the_password">Enter the Password</string>
    <string name="dont_have_account"><u>dont have account?</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
